--- a/soccerPortal/css/style.css
+++ b/soccerPortal/css/style.css
@@ -1,9 +1,14 @@
 @charset "utf-8";
 /* CSS Document */
+/*--------------------------------------------------------------*/	
+/* CSS für das Fußball-Wettportal "soccer portal" SWTP 13/14 */
+/*--------------------------------------------------------------*/	
 /* Einstellungen für den Html Body */
 body			{
-				padding-top:0px;
+				padding-top	:0px;
 				margin-top:0px;
+				padding:0px;
+				margin:0px;
 				background-image:url(../images/backgrounds/dark_wall.png);
 				background-repeat:repeat;
 				}
@@ -14,17 +19,24 @@ a         		{
 				text-decoration:none;
 				color:#FFF;
 				}
+/* Div die Sidebar und Hauptbereiche fasst */
+#grapper		{
+				height:1002px;
+				width:1300px;
+				margin:0px auto;
 
-/* Div für den gesammten Bereich */			
+				}
+
+/* Div für den Header,Banner und Contentbereich */			
 #all			{
 				height:1000px;
 				width:921px;
 				margin:0px auto;
-				text-align:left; 
+				text-align:left;
 				}
 				
 /* Button div für die Headerbuttons */								
-#bannerBtn		{
+#headerBtn		{
 				height: 65px;
 				width: 249px;
 				position:absolute;
@@ -51,16 +63,83 @@ a         		{
 				}
 /* Headerbereich */				
 #header			{
+	
 				height: 110px;
 				width: 900px;
 				margin-left: 10px;
 				background-image:url(../images/site/header.png);
 				}
 /*--------------------------------------------------------------*/	
+/* Navileiste links */
+#sidebar		{
+				position:absolute;
+				top:15px;
+				margin-left:50px;
+				z-index:-1;
+				height:1000px;
+				width:200px;
+				border-top-left-radius:200px;
+				border-bottom-left-radius:200px;
+				background-color:#121212;
+				float:left;
+				}
+#sidenavi		{
+				height:500px;
+				width:180px;
+				background-color:#666;
+				float:right;
+				margin-top:250px;
+				border-top-left-radius:16px;
+				border-bottom-left-radius:16px;
+				}
+.sideBtn		{
+				margin-left:5px;
+				margin-top:7px;
+				height:35px;
+				width::80px;
+				border: 1px solid black;
+				background-color:#093;
+				box-shadow:inset 3px 3px 6px #000000;
+				background: -moz-linear-gradient(top, #494949 30%, #161616 130%);
+				background: -webkit-gradient(linear, left top, left bottom, color-stop(30%,#494949), color-stop(130%,#161616)); /* Chrome,Safari4+ */
+				background: -webkit-linear-gradient(top, #494949 30%,#161616 130%); /* Chrome10+,Safari5.1+ */
+				background: -o-linear-gradient(top, #494949 30%,#161616 130%); /* Opera 11.10+ */
+				background: -ms-linear-gradient(top, #494949 30%,#161616 130%); /* IE10+ */
+				background: linear-gradient(to bottom, #494949 30%,#161616 130%); /* W3C */
+				}
+.sideBtn.first  {
+				border-top-left-radius:12px;
+				}
+.sideBtn.last	{
+				border-bottom-left-radius:12px;
+				}
+.sideBtnTxt		{
+				padding-top:10px;
+				text-align:center;
+				width:120px;
+				font-family:Arial, Helvetica, sans-serif;
+				font-size:12px;
+				font-weight:bold;
+				color:#FFF;
+				}
+/*--------------------------------------------------------------*/					
+/* Class für Text -> Aktuelle Top-Wetten */
+.topic			{
+				color:#FF0;
+				font-family:Arial, Helvetica, sans-serif;
+				font-size:14px;
+				font-weight:bold;
+				position:absolute;
+				top:470px;
+				margin-left:25px;
+				height:20px;
+				width:200px;
+				}
+/*--------------------------------------------------------------*/	
 /* Login auf header */
 #loginH			{
 				height:30px;
-				width:400px;
+				width:300px;
 				margin-top:26px;
 				float:right;
 				}
@@ -72,8 +151,23 @@ a         		{
 				font-weight:bold;
 				margin-right:5px;
 				}
+.loginBtn		{
+				position:absolute;
+				top:25px;
+				border: none;
+				background:url(../images/site/buttons/loginBtn.png) no-repeat top left;
+				height:30px;
+				width:61px;
+				}
+.loginBtn:hover{
+				background:url(../images/site/buttons/loginBtnHover.png) no-repeat top left;
+				}
+.loginBtn:active{
+				background:url(../images/site/buttons/loginBtnActive.png) no-repeat top left;
+				}
 /*--------------------------------------------------------------*/	
-/* Bannerbereich */			
+/* Bannerbereich */	
+/*--------------------------------------------------------------*/			
 #banner			{
 				height: 383px;
 				width: 921px;
@@ -104,16 +198,60 @@ a         		{
 				font-size:10px;
 				color:#FFF;
 				}
+/*--------------------------------------------------------------*/	
+/* Navi auf dem BannerPic:
+/*--------------------------------------------------------------*/	
+/* Div für die Navi auf dem Bannerpic */
+#bannerNavi		{
+				position:absolute;
+				height:50px;
+				width:875px;
+				top:203px;
+				}
+.bannerBtn		{
+				height:31px;
+				width:111px;
+				}
+/* Button rechts außen: */
+.bannerBtn.btnr {
+				position:absolute;
+				top:19px;
+				right:0px;
+				background:url(../images/site/buttons/bannerBtn2Norm.png) no-repeat bottom right;
+				}
+.bannerBtn.btnr:hover{
+				background:url(../images/site/buttons/bannerBtn2Hover.png) no-repeat bottom right;
+				}
+/* Buttons links davon: */
+.bannerBtn.btnl {
+				width:139px;
+				position:absolute;
+				top:19px;
+				right:90px;
+				background:url(../images/site/buttons/bannerBtnNorm.png) no-repeat bottom right;
+				}
+.bannerBtn.btnl:hover{
+				background:url(../images/site/buttons/bannerBtnHover.png) no-repeat bottom right;
+				}
+.bBtnTxt		{
+				margin-top:5px;
+				margin-left:2px;
+				font-family:Arial, Helvetica, sans-serif;
+				font-size:14px;
+				font-weight:bold;
+				text-align:center;
+				}
+/*--------------------------------------------------------------*/		
 /* Bereich unter dem Banner der den Inhalt fasst */
 #content		{
 				height:auto;
 				min-height: 800px;
 				width: 900px;
 				background-color:#2b2a2a;
-				margin: 0px auto;
+				margin-left:11px;
 				}
 				
-		
+/*--------------------------------------------------------------*/			
 /* Alles was mit dem Wettfeld zu tun hat: */
 /*--------------------------------------------------------------*/	
 /* Schwarze Box die im Contentbereich die Wettfelder fasst: */				
@@ -140,6 +278,11 @@ a         		{
 				border-bottom-left-radius: 8px;
 				-webkit-border-bottom-left-radius: 8px;
 				background: -moz-linear-gradient(top, #4e4e4e 10%, #161616 120%);
+				background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,#4e4e4e), color-stop(120%,#161616)); /* Chrome,Safari4+ */
+				background: -webkit-linear-gradient(top, #4e4e4e 10%,#161616 120%); /* Chrome10+,Safari5.1+ */
+				background: -o-linear-gradient(top, #4e4e4e 10%,#161616 120%); /* Opera 11.10+ */
+				background: -ms-linear-gradient(top, #4e4e4e 10%,#161616 120%); /* IE10+ */
+				background: linear-gradient(to bottom, #4e4e4e 10%,#161616 120%); /* W3C */
 				float:left;
 				}
 /* Spacer fuer linkes Flaggen icon (innerer Bereich) */
@@ -149,7 +292,9 @@ a         		{
 				margin:4px;
 				margin-top:5px;
 				border-top-left-radius: 6px;
+				-webkit-border-top-left-radius: 6px;
 				border-bottom-left-radius: 6px;
+				-webkit-border-bottom-left-radius: 6px;
 				background-image:url(../images/site/flgSpacerLeft.png);
 				}
 /* Rechter Button fuer Flaggen icon (äußerer Rand grau) */
@@ -157,8 +302,15 @@ a         		{
 				height: 42px;
 				width: 66px;
 				border-top-right-radius: 8px;
+				-webkit-border-top-right-radius: 8px;
 				border-bottom-right-radius: 8px;
+				-webkit-border-bottom-right-radius: 8px;
 				background: -moz-linear-gradient(top, #4e4e4e 10%, #161616 120%);
+				background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,#4e4e4e), color-stop(120%,#161616)); /* Chrome,Safari4+ */
+				background: -webkit-linear-gradient(top, #4e4e4e 10%,#161616 120%); /* Chrome10+,Safari5.1+ */
+				background: -o-linear-gradient(top, #4e4e4e 10%,#161616 120%); /* Opera 11.10+ */
+				background: -ms-linear-gradient(top, #4e4e4e 10%,#161616 120%); /* IE10+ */
+				background: linear-gradient(to bottom, #4e4e4e 10%,#161616 120%); /* W3C */
 				float:left;
 				}
 /* Spacer fuer rechtes Flaggen icon (innerer Bereich) */
@@ -169,7 +321,9 @@ a         		{
 				margin:4px;
 				margin-top:5px;
 				border-top-right-radius: 6px;
+				-webkit-border-top-right-radius: 6px;
 				border-bottom-right-radius: 6px;
+				-webkit-border-bottom-right-radius: 6px;
 				background-image:url(../images/site/flgSpacerRight.png);
 				}
 /* Text auf match Button links */			
@@ -290,10 +444,210 @@ a         		{
 /*--------------------------------------------------------------*/					
 /* ENDE Wettfeld */
 /*--------------------------------------------------------------*/	
+/*--------------------------------------------------------------*/					
+/* ENDE Startseitendefinitionen */
+/*--------------------------------------------------------------*/	
+
+#frontendHead	{
+				height:77px;
+				background-image:url(../images/site/frontend/headerBG.png);
+				background-repeat:repeat-x;
+				}
+#frontendNavi	{
+				margin: 0px auto;
+				height:77px;
+				width:1300px;
+				background:url(../images/site/frontend/FNavi.png) no-repeat;
+/*				background-color:#F00;*/				
+				}
+#logoSpacer		{
+				height:62px;
+				width:210px;
+				background-image:url(../images/site/frontend/logoSpacer.png);
+				float:left;
+				}
+#frontlogo		{
+				height:54px;
+				width:54px;
+				background-image:url(../images/site/logos/frontendLogo.png);
+				margin-left:12px;
+				margin-top:2px;
+				}
+				
+#navBtns		{
+				width:770px;
+				height:53px;
+				background-image:url(../images/site/frontend/btnfixgradient.png);
+				background-repeat:repeat-x;
+				}
+#navgreen		{
+				position:absolute;
+				overflow:visible;
+				left:0px;
+				height:5px;
+				width:790px;
+				background:url(../images/site/frontend/green.png) no-repeat;
+				float:left;
+				}
+#navspace		{
+				position:relative;
+				height:62px;
+				border-bottom-width:770px;
+				float:left;
+				}
+.leftBtn		{
+				float:left;
+				height:53px;
+				width:121px;
+				background-image:url(../images/site/frontend/leftbtn.png);
+				}
+.leftBtn:hover	{
+				background-image:url(../images/site/frontend/leftbtnHover.png);
+				}
+.rightBtn		{
+				height:53px;
+				width:111px;
+				float:left;
+				background-image:url(../images/site/frontend/rightbtn.png);
+				}
+.rightBtn:hover	{
+				background-image:url(../images/site/frontend/rightbtnHover.png);
+				}
+.frontbtnsTxt	{
+				margin-top:15px;
+				margin-right:10px;
+				font-family:Arial, Helvetica, sans-serif;
+				font-size:14px;
+				font-weight:bold;
+				color:#FFF;
+				text-align:center;
+}
+.rightBtn.last	{
+				position:absolute;
+				left:675px;
+				overflow:visible;
+				}
+#score			{
+				height:61px;
+				width:136px;
+				background-image:url(../images/site/frontend/scoreBG.png);
+				float:left;
+				}
+#coin			{
+				height:44px;
+				width:45px;
+				margin-left:15px;
+				background-image:url(../images/site/frontend/crp.png);
+				float:left;
+				}
+#money			{
+				height:20px;
+				width:70px;
+				font-family:Arial, Helvetica, sans-serif;
+				font-weight:bold;
+				font-size:22px;
+				text-align:center;
+				text-shadow: 0px 1px 2px #000;
+				color:#FFF;
+				margin-top:8px;
+				float:left;
+				}
+#toplist		{
+				margin:0px;
+				height:15px;
+				width:80px;
+				float:left;
+				}
+#arrows			{
+				height:15px;
+				width:51px;
+				background:url(../images/site/frontend/arrows.png) no-repeat;
+				float:left;	
+}
+#profilspacer	{
+				height:62px;
+				width:99px;
+				background:url(../images/site/frontend/profilspacer.png) no-repeat;
+				float:left;
+				margin-left:4px;
+}
+#profilPic		{
+				margin-left:22px;
+				margin-top:1px;
+				height:52px;
+				width:52px;
+				border-radius:4px;
+				background-image:url(../images/site/user/profil/Gandalf123/gandalf123.png);
+				}
+#username		{
+				height:30px;
+				width:80px;
+				/*background-color:#060;*/
+				float:left;
+				}
+.utext			{
+				font-family:Arial, Helvetica, sans-serif;
+				font-size:12px;
+				font-weight:bold;
+				color:#FFF;
+				text-align:center;	
+				}
+#logoutBtn		{
+				margin-top:4px;
+				margin-left:10px;
+				height:28px;
+				width:62px;
+				background-image:url(../images/site/buttons/logout.png);
+				float:left;
+				}
+#logoutBtn:hover{
+				background-image:url(../images/site/buttons/logoutHover.png);
+}
+/*--------------------------------------------------------------*/	
+.frontendGradient{
+			 	background: -moz-linear-gradient(top, #535353 10%, #101010 120%);
+				background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,#535353), color-stop(120%,#101010)); /* Chrome,Safari4+ */
+				background: -webkit-linear-gradient(top, #535353 10%,#101010 120%); /* Chrome10+,Safari5.1+ */
+				background: -o-linear-gradient(top, #535353 10%,#101010 120%); /* Opera 11.10+ */
+				background: -ms-linear-gradient(top, #535353 10%,#101010 120%); /* IE10+ */
+				background: linear-gradient(to bottom, #535353 15%,#101010 70%); /* W3C */
+				}
 
 
 
+/*--------------------------------------------------------------*/	
+/* START Shoutbox*/
+/*--------------------------------------------------------------*/	
+#shoutboxbutton {
+				z-index:1000;
+				width:30px;
+				height:400px;
+				right:0px;
+				cursor:pointer;
+				position:fixed;
+				top:125px;
+				}
 
+#shoutboxbutton p{
+				text-align: center
+				}
+
+#shoutbox		{
+				z-index:1000;
+				background-color:green;
+				width:250px;
+				height:500px;
+				position:fixed;
+				top:75px;
+				right:30px;
+				}
+
+#shoutboxpicture{
+
+}
+/*--------------------------------------------------------------*/	
+/* ENDE Shoutbox*/
+/*--------------------------------------------------------------*/	
 
 
 
