Pfade angepasst, Popup zum registrieren gemacht

--- a/soccerPortal/css/style.css
+++ b/soccerPortal/css/style.css
@@ -649,6 +649,23 @@ a         		{
 /* ENDE Shoutbox*/
 /*--------------------------------------------------------------*/	
 
+/*--------------------------------------------------------------*/	
+/* START Register Popup*/
+/*--------------------------------------------------------------*/	
+
+#registerPopup{
+	z-index:1000;
+	width:325px;
+	height:403px;
+	position:fixed;
+	top:150px;
+	left:525px;
+	background-image: url(../images/site/popup/registerPopup.png);
+}
+
+/*--------------------------------------------------------------*/	
+/* ENDE Register Popup*/
+/*--------------------------------------------------------------*/	
 
 
 
