--- a/soccerPortal/css/style.css
+++ b/soccerPortal/css/style.css
@@ -29,6 +29,8 @@ a         		{
 
 /* Div für den Header,Banner und Contentbereich */			
 #all			{
+				position:relative;
+				z-index:2;
 				height:1000px;
 				width:921px;
 				margin:0px auto;
@@ -75,7 +77,7 @@ a         		{
 				position:absolute;
 				top:15px;
 				margin-left:50px;
-				z-index:-1;
+				z-index:0;
 				height:1000px;
 				width:200px;
 				border-top-left-radius:200px;
@@ -84,6 +86,8 @@ a         		{
 				float:left;
 				}
 #sidenavi		{
+				position:relative;
+				z-index:1;
 				height:500px;
 				width:180px;
 				background-color:#666;
@@ -442,12 +446,22 @@ a         		{
 				color:#000;
 				}
 /*--------------------------------------------------------------*/					
-/* ENDE Wettfeld */
+/* ENDE Wettfeld 												*/
 /*--------------------------------------------------------------*/	
 /*--------------------------------------------------------------*/					
-/* ENDE Startseitendefinitionen */
+/* ENDE Startseitendefinitionen 								*/
 /*--------------------------------------------------------------*/	
-
+/*--------------------------------------------------------------*/					
+/* START Frontenddefinitionen 									*/
+/*--------------------------------------------------------------*/
+#frontcontent	{
+				min-height:1000px;
+				width:1300px;
+				margin:0px auto;
+				text-align:left;
+				background-color:#093;
+				}
+/*--------------------------------------------------------------*/
 #frontendHead	{
 				height:77px;
 				background-image:url(../images/site/frontend/headerBG.png);
@@ -473,7 +487,7 @@ a         		{
 				margin-left:12px;
 				margin-top:2px;
 				}
-				
+/*--------------------------------------------------------------*/					
 #navBtns		{
 				width:770px;
 				height:53px;
@@ -521,12 +535,13 @@ a         		{
 				font-weight:bold;
 				color:#FFF;
 				text-align:center;
-}
+				}
 .rightBtn.last	{
 				position:absolute;
 				left:675px;
 				overflow:visible;
 				}
+/*--------------------------------------------------------------*/	
 #score			{
 				height:61px;
 				width:136px;
@@ -563,7 +578,8 @@ a         		{
 				width:51px;
 				background:url(../images/site/frontend/arrows.png) no-repeat;
 				float:left;	
-}
+				}
+/*--------------------------------------------------------------*/	
 #profilspacer	{
 				height:62px;
 				width:99px;
@@ -602,8 +618,42 @@ a         		{
 				}
 #logoutBtn:hover{
 				background-image:url(../images/site/buttons/logoutHover.png);
-}
-/*--------------------------------------------------------------*/	
+				}
+/*--------------------------------------------------------------*/					
+#newsSpacer		{
+				height:340px;
+				width:500px;
+				background-color:#0C9;
+				float:left;
+				}
+#newsBtnSpacer	{
+				height:340px;
+				width:160px;
+				background-color:#F00;
+				float:left;
+				}
+#news			{
+				position:relative;
+				top:10px;
+				left:10px;
+				}
+#newsContent	{
+				height:240px;
+				width:390px;
+				border-radius: 12px;
+				}
+.newsBtn		{
+				height:80px;
+				width:150px;
+				}
+.newsPic		{
+				
+				}
+.newsBtnTxt		{
+				
+				}
+/*--------------------------------------------------------------*/
+/*--------------------------------------------------------------*/		
 .frontendGradient{
 			 	background: -moz-linear-gradient(top, #535353 10%, #101010 120%);
 				background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,#535353), color-stop(120%,#101010)); /* Chrome,Safari4+ */
@@ -612,11 +662,9 @@ a         		{
 				background: -ms-linear-gradient(top, #535353 10%,#101010 120%); /* IE10+ */
 				background: linear-gradient(to bottom, #535353 15%,#101010 70%); /* W3C */
 				}
-
-
-
 /*--------------------------------------------------------------*/	
-/* START Shoutbox*/
+/*--------------------------------------------------------------*/	
+/* START Shoutbox												*/
 /*--------------------------------------------------------------*/	
 #shoutboxbutton {
 				z-index:1000;
@@ -646,11 +694,11 @@ a         		{
 
 }
 /*--------------------------------------------------------------*/	
-/* ENDE Shoutbox*/
+/* ENDE Shoutbox												*/
 /*--------------------------------------------------------------*/	
 
 /*--------------------------------------------------------------*/	
-/* START Register Popup*/
+/* START Register Popup											*/
 /*--------------------------------------------------------------*/	
 
 #registerPopup{
@@ -664,7 +712,7 @@ a         		{
 }
 
 /*--------------------------------------------------------------*/	
-/* ENDE Register Popup*/
+/* ENDE Register Popup											*/
 /*--------------------------------------------------------------*/	
 
 
