dynamisches laden der inhalte, der Startseite

--- a/soccerPortal/css/style.css
+++ b/soccerPortal/css/style.css
@@ -125,6 +125,7 @@ a         		{
 				font-size:12px;
 				font-weight:bold;
 				color:#FFF;
+				cursor:pointer;
 				}
 /*--------------------------------------------------------------*/					
 /* Class für Text -> Aktuelle Top-Wetten */
@@ -270,6 +271,10 @@ a         		{
 				padding-bottom: 8px;
 				background-color:#000;
 				border-radius:8px;
+				font-family:Arial, Helvetica, sans-serif;
+				font-size:12px;
+				font-weight:bold;
+				color:#FFF;
 				}
 /*--------------------------------------------------------------*/	
 /* Linker Button fuer Flaggen icon (äußerer Rand grau) */
