--- a/soccerPortal/css/dropdown.css
+++ b/soccerPortal/css/dropdown.css
@@ -1,13 +1,56 @@
 #nav {}
-#nav ul{ list-style-type:none; margin:0; padding:0; }
+#nav ul{ 
+	list-style-type:none;
+	margin:0;
+	padding:0;
+	border-bottom-left-radius:4px;
+	border-bottom-right-radius:4px; 
+	background: -moz-linear-gradient(top, #494949 30%, #161616 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(30%,#494949), color-stop(100%,#161616)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #494949 30%,#161616 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #494949 30%,#161616 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #494949 30%,#161616 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #494949 30%,#161616 100%); /* W3C */
+	box-shadow: 0px 2px 2px #000;
+	
+	}
 #nav li { float:left; padding:0; margin:0;}
-#nav li a { width:150px; display:block; text-align:center; color:#000; margin-right:5px; height:35px; line-height:35px; text-decoration:none; font-size:80%; border:1px solid #ccc; }
+#nav li a { 
+	display:block;
+	text-align:center;
+	color:#000; 
+	margin-right:5px;
+	height:35px; 
+	line-height:35px;
+	text-decoration:none;
+	font-size:80%;
+	}
 #nav li a:hover { color:#f00; }
-#nav ul ul { display:none; position:absolute; z-index:999; }
+#nav ul ul { 
+	display:none;
+	position:absolute;
+	z-index:999; 
+	}
 #nav li li { float:none; }
-#nav li li a { background:#EBE7E6!important; text-align:left; height:auto; line-height:1; width:auto; padding:8px 20px 8px 22px; border:1px solid #D0D0D0; border-top:none; margin-right:0; }
+.navitem { 
+	vertical-align:top;
+	text-align:left;
+	color:#fff;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:12px;
+	font-weight:bold;
+	height:30px;;
+	width:200px;
+	padding:8px 20px 8px 22px;
+	margin-right:0;
+	border-top:1px solid #696969;
+	}
 * html li li { display:inline; } /* IE6 Bugfix... */
 .dropspace{
-	position:relative;
+	position: relative;
 	top:53px;
+}
+.innerdrp{
+	margin:6px;
+	
 }
