Navi Leiste angepasst. CSS bearbeitet, js geschrieben zum dynamischen nachladen, die Bezeichnungen der leiste veraendert, Links hinterlegt

--- a/soccerPortal/css/style.css
+++ b/soccerPortal/css/style.css
@@ -532,6 +532,7 @@ a         		{
 				float:left;
 				height:53px;
 				width:121px;
+				cursor:pointer;
 				background-image:url(../images/site/frontend/leftbtn.png);
 				}
 .leftBtn:hover	{
@@ -541,6 +542,7 @@ a         		{
 				height:53px;
 				width:111px;
 				float:left;
+				cursor:pointer;
 				background-image:url(../images/site/frontend/rightbtn.png);
 				}
 .rightBtn:hover	{
