Navi erweitert,shoutbox auskommentiert, aktuelleSpiele.php erstellt

--- a/soccerPortal/css/style.css
+++ b/soccerPortal/css/style.css
@@ -980,6 +980,7 @@ a         		{
 				padding-bottom: 8px;
 				background-color:#000;
 				border-radius:8px;
+				color:white;
 }
 .betStats		{
 }
