--- a/soccerPortal/css/style.css
+++ b/soccerPortal/css/style.css
@@ -615,6 +615,7 @@ a         		{
 				height:52px;
 				width:52px;
 				border-radius:4px;
+				cursor:pointer;
 				background-image:url(../images/site/user/profil/Gandalf123/gandalf123.png);
 				}
 #username		{
