--- a/soccerPortal/css/styleProfil.css
+++ b/soccerPortal/css/styleProfil.css
@@ -4,50 +4,31 @@
 	background-color:white;
 }
 
-#divDaten{
-	left:250px;
-	right:250px;
-	top:100px;
-}
-
-#profilBild{
-	width:250px;
-	height:250px;
-	background-color:green;
-	float:left;
-}
-
 #profilDaten{
-	width:250px;
+	width:550px;
 	height:250px;
+}
+
+#profildiv{
+	height:350px;
+	padding-top:25px;
 	background-color:yellow;
-	float:right;
 }
 
 #profilBListe{
-	width:250px;
-	height:250px;
+	width:500px;
+	height:350px;
 	background-color:red;
-	position:absolute;
-	top:350px;
-	left:650px;
+	float:left;
 }
 
 #profilStatWetten{
-	width:250px;
-	height:250px;
+	width:500px;
+	height:350px;
 	background-color:blue;
-	position:absolute;
-	top:350px;
-	left:250px;
+	float:right;
 }
 
 #profilStatTeamWetten{
-	width:250px;
-	height:250px;
 	background-color:orange;
-	position:absolute;
-	top:700px;
-	left:100px;
-	right:100px;
 }
