--- a/soccerPortal/css/styleProfil.css
+++ b/soccerPortal/css/styleProfil.css
@@ -9,6 +9,15 @@
 	height:250px;
 }
 
+#profilDatenBesch{
+	width:250px;
+	height:150px;
+	left:650px;
+	top:180px;
+	position:absolute;
+	background-color:green;
+}
+
 #profildiv{
 	height:350px;
 	padding-top:25px;
